# Nikox2

./: .gitignore  CMakePresets.json  CmakeLists.txt  README.md  vcpkg.json  vcpkg_installed - Shortcut.lnk
cmake/: common.cmake  compilerWarnings.cmake
interface/: CMakeLists.txt
interface/common/: TPExcelInterfaceFunctions.cpp  TPExcelInterfaceFunctions.h
interface/excel/: CMakeLists.txt  TPExcelArgument.h  TPExcelArgumentArray.cpp  TPExcelArgumentArray.h  TPExcelHelp.h  TPExcelInterface.cpp  TPExcelInterface.h  TPExcelRegistrationFunctions.cpp  TPExcelRegistrationFunctions.h  TPXLInterfaceUtils.h  XLCall.cpp  XLCall.h  XLOper.cpp  XLOper.h  framework.cpp  framework.h
interface/excel/NewInterface/: moduleInfo.cpp  moduleInfo.h
interface/python/: CmakeLists.txt  pyNiko.cpp  pybind11_json.h  pybind_enum_utils.h  type_casters.h
interface/tpnikoxl/: CMakeLists.txt  TPXLNiko.def  TPXLNikoMain.cpp  TPXLNikoUtils.h
interface/tpnikoxl/API/: TPXLInfo.cpp
src/: CMakeLists.txt  Nikopolis.natvis  TPNiCoPolisVersion.h  TPNikopolisRoot.cpp  TPNikopolisRoot.h  TPNikopolisUtils.h  TPNikopolis_Core.h
src/tpdatetime/: BusinessDay.cpp  BusinessDay.h  CMakeLists.txt  Calendar.cpp  Calendar.h  CalendarProvider.cpp  CalendarProvider.h  CalendarStore.cpp  CalendarStore.h  Clocks.cpp  Clocks.h  Date.cpp  Date.h  DateInterface.cpp  DateInterface.h  DateIterator.cpp  DateIterator.h  DateRules.h  Durations.cpp  Durations.h  Frequency.cpp  Frequency.h  IMMGenerator.cpp  IMMGenerator.h  IMMIterators.cpp  IMMIterators.h  Tenor.cpp  Tenor.h  YearMonthDay.cpp  YearMonthDay.h  datetime.cpp  datetime.h
src/tpdatetime/DayCounters/: CalendarBasedDayCounter.h  DayCounter.cpp  DayCounter.h  DayCounter30360.cpp  DayCounter30360.h  DayCounter30360German.cpp  DayCounter30360German.h  DayCounter30E360.cpp  DayCounter30E360.h  DayCounterActAct.cpp  DayCounterActAct.h  DayCounterActActBond.cpp  DayCounterActActBond.h  DayCounterActual360.h  DayCounterActual365.h  DayCounterBus252.h  DayCounterConstant.h  DayCounterNL365.cpp  DayCounterNL365.h  DayCounterStore.cpp  DayCounterStore.h  DayCounterTBillsACT365.cpp  DayCounterTBillsACT365.h  FracMonthDayCounter.h  TenorBasedDayCounter.h
src/tpdatetime/financial/: BusinessDayConvention.h  DateAdjustment.cpp  DateAdjustment.h  FXDate.cpp  FXDate.h  Lags.h  SpotRule.cpp  SpotRule.h
src/tpdatetime/schedule/conventions/: DateConvention.cpp  DateConvention.h  StandardDateConvention.cpp  StandardDateConvention.h
src/tpdatetime/utils/: CBDateIndexed.cpp  CBDateIndexed.h  StartEndDated.h
src/tpformulae/: CMakeLists.txt  TPDepoConversions.cpp  TPDepoConversions.h
src/tpformulae/tmp/: TPIRBlackAnalytics.cpp  TPIRBlackAnalytics.h
src/tpmarket/: CMakeLists.txt
src/tpmarket/karezi/: graph.cpp  graph.h  mkt_builder.cpp  mkt_builder.h  vf.cpp  vf.h
src/tpmarketdata/: CMakeLists.txt  MarketEnums.cpp  MarketEnums.h  rates_curve_data.h
src/tpmarketdata/marketcurves/: discount_factors.h
src/tpmaths/: CmakeLists.txt  Constants.h  Interval.h  TPMatrix.h  gsl_wrapper.h  math_enums.h
src/tpmaths/L1TrendFilter/: l1tf.c  l1tf.h
src/tpmaths/cpm/: ChangePointModel.cpp  ChangePointModel.h  ChangePointModelCVM.cpp  ChangePointModelCVM.h  ChangePointModelT.cpp  ChangePointModelT.h  ChangePointModelWithOrders.cpp  ChangePointModelWithOrders.h
src/tpmaths/interpolation/: basis_spline.cpp  basis_spline.h  curve.h
src/tpmaths/rootfinding/: Boost1DRootFinding.h  CubicSolver.cpp  CubicSolver.h
src/tpmodels/: CmakeLists.txt
src/tpmodels/curves/: curve_enums.h  curve_utils.h  discount_curve.h
src/tpproducts/: CmakeLists.txt
src/tpproducts/curveinstruments/: instruments.h  rate_futures.h
src/tpproducts/templates/: Generator.cpp  Generator.h
src/tptools/: CMakeLists.txt  Currency.cpp  Currency.h  CurrencyPair.cpp  CurrencyPair.h  TPAbort.cpp  TPAbort.h  TPAny.cpp  TPAny.h  TPException.cpp  TPException.h  TPGlobals.cpp  TPGlobals.h  TPIdentifier.h  TPMathException.h  arrays.h
src/tptools/Containers/: CacheMemory.cpp  CacheMemory.h
src/tptools/Utils/: Formatting.h  NotNull.h  Operators.h  TPEnum.cpp  TPEnum.h  TPOptional.h  TypeDefs.h  TypeTraits.h  enum_class.h  hash_replace.h  variant_utils.h
src/tptools/objectstore/: GeneralObjectStore.cpp  GeneralObjectStore.h  Object.h  ObjectStore.cpp  ObjectStore.h
src/tptools/serialisation/: include.h
src/tptools/stringutils/: TPCompare.cpp  TPCompare.h  TPStringComparefunctional.h  TPStringUtils.cpp  TPStringUtils.h  stringtools.cpp  stringtools.h
src/tptools/time/: TPDate.cpp  TPDate.h  TPDateUtils.h  TPFrequency.cpp  TPFrequency.h  TPHolidays.cpp  TPHolidays.h  TPPeriod.cpp  TPPeriod.h  TPTenor.cpp  TPTenor.h
tests/: README.md
tests/cpp/: CmakeLists.txt
tests/cpp/tpdatetime/: test_date.cpp  test_datetime.cpp  test_durations.cpp
tests/cpp/tpmarketdata/: test_discount_factors.cpp
tests/cpp/tpmaths/: test_bspline.cpp  test_gsl.cpp  test_matrix.cpp
tests/cpp/tptools/: test_enums.cpp  test_string_utils.cpp
